[package]
name = "heldout"
version = "0.1.0"
edition = "2021"
authors = ["Heldout Contributors"]
description = "Catches AI coding agents that fake task completion — deleted tests, skipped tests, weakened assertions, and a held-out test replay that proves it"
license = "MIT"
repository = "https://github.com/abdouloued/heldout"
keywords = ["ai", "agents", "git", "testing", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.75"

[[bin]]
name = "heldout"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
git2 = { version = "0.19", default-features = false }
ignore = "0.4"
libc = "0.2"
regex-lite = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
